--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,8 +1,8 @@
 /* Importación de todos los estilos de la plantilla ActiveBox */
-@import url('/css/bootstrap.min.css');
-@import url('/css/flexslider.css');
-@import url('/css/jquery.fancybox.css');
-@import url('/css/main.css');
-@import url('/css/responsive.css');
-@import url('/css/animate.min.css');
+@import './bootstrap.min.css';
+@import './flexslider.css';
+@import './jquery.fancybox.css';
+@import './activebox-main.css';
+@import './responsive.css';
+@import './animate.min.css';
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css');
